--- a/css/styles.css
+++ b/css/styles.css
@@ -89,12 +89,15 @@ img {
   object-fit: cover;
 }
 
-/* Header */
 .container {
   width: 100%;
   max-width: 1168px;
   margin: 0 auto;
   padding: 0 16px;
+}
+
+.section {
+  padding: 64px 0;
 }
 
 /* Header */
@@ -127,6 +130,7 @@ img {
   color: var(--color-secondary);
   text-decoration: none;
   text-underline-offset: 2px;
+  font-variant: small-caps;
 }
 
 .header__link:hover {
@@ -149,6 +153,7 @@ img {
   content: '';
 }
 
+/* Button */
 .button {
   display: flex;
   align-items: center;
@@ -174,13 +179,10 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.button-small {
+.header__button {
   padding: 12px 16px;
   text-transform: capitalize;
-}
-
-.section {
-  padding: 64px 0;
+  font-variant: small-caps;
 }
 
 /* .Hero section */
@@ -188,17 +190,17 @@ img {
   padding: 32px 0 64px;
 }
 
-.hero-container {
+.hero-section__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.hero-content {
+.hero-section__content {
   max-width: 600px;
 }
 
-.hero-title {
+.hero-section__title {
   position: relative;
   margin-bottom: 24px;
   color: var(--color-secondary);
@@ -208,7 +210,7 @@ img {
   text-transform: uppercase;
 }
 
-.hero-title::before {
+.hero-section__title::before {
   position: absolute;
   z-index: -1;
   top: -56px;
@@ -220,7 +222,7 @@ img {
   content: '';
 }
 
-.hero-text {
+.hero-section__text {
   margin-bottom: 40px;
   max-width: 500px;
 }
@@ -229,6 +231,7 @@ img {
 .heading-title {
   margin: 0 0 8px;
   color: var(--color-heading-title);
+  font-weight: 500;
   font-size: 24px;
   line-height: 1.333;
   text-transform: uppercase;
@@ -248,13 +251,13 @@ img {
 }
 
 /* Advantage section */
-.advantages-container {
-  width: 440px;
-}
-
-.common.container {
+.section__container {
   display: flex;
   justify-content: space-between;
+}
+
+.advantages__container {
+  width: 440px;
 }
 
 .advantages {
@@ -268,59 +271,60 @@ img {
   top: 24px;
   width: 600px;
   height: 160px;
-  background-image: var(--decor-gradient);
+  background-image: url(../images/decor_bcg.png);
   content: '';
 }
 
-/* Advantage card */
-.card-thumb {
+/* Card section */
+.card-section {
   width: 600px;
   display: flex;
 }
 
-.common.container {
+/* .common.container {
   display: flex;
-}
+} */
 
-.card-container {
+.card-section__container {
   display: flex;
   flex-wrap: wrap;
 }
 
-.flex-element {
+.card-section__element {
   width: 288px;
   height: 238px;
   margin-right: 20px;
   margin-bottom: 20px;
+  border-radius: 8px;
 }
 
-.flex-element:nth-child(2n) {
+.card-section__element:nth-child(2n) {
   margin-right: 0;
 }
 
-.flex-element:nth-last-child(-n + 2) {
+.card-section__element:nth-last-child(-n + 2) {
   margin-bottom: 0;
 }
 
-.advantage-card {
+.card-section__card {
   padding: 32px 40px;
   border-radius: 8px;
   margin-bottom: 32px;
 }
 
-.flex-element:hover {
+.card-section__element:hover {
   background-color: var(--color-invert);
 }
 
-.flex-element:hover .thumb {
+.card-section__element:hover .card-section__thumb {
   background-color: var(--color-brand);
 }
 
-.flex-element:hover .advantage-card-icon {
+.card-section__element:hover .card-section__icon {
   fill: var(--color-invert);
 }
 
-.thumb {
+.card-section__thumb {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -331,19 +335,20 @@ img {
   border-radius: 8px;
 }
 
-.advantage-card-icon {
+.card-section__icon {
   fill: var(--color-brand);
 }
 
-.advantage-card-title {
+.card-section__title {
   margin-bottom: 8px;
 
   font-weight: 500;
   font-size: 24px;
   line-height: 1.5;
+  font-variant: small-caps;
 }
 
-.advantage-card-text {
+.card-section__text {
   margin-bottom: 0;
 
   font-size: 14px;
@@ -362,7 +367,7 @@ img {
   right: 0;
   width: 600px;
   height: 160px;
-  background-image: var(--decor-gradient);
+  background-image: url(../images/dcr_bcg.png);
   transform: rotate(180deg);
   content: '';
 }
@@ -379,24 +384,23 @@ img {
   content: '';
 }
 
-.features-list {
+.features__list {
   display: flex;
   gap: 44px;
   flex-wrap: wrap;
 }
 
-.features-item {
+.features__item {
   flex-basis: calc((100% - 88px) / 3);
 }
 
-.features-item:nth-child(even) .feature-card {
+.features__item:nth-child(even) .features__card {
   color: var(--color-invert);
   fill: var(--color-invert);
   background-color: var(--color-brand);
 }
 
-/* Feature card */
-.feature-card {
+.features__card {
   /* position: relative; */
   padding: 64px 50px 60px;
   fill: var(--color-brand);
@@ -405,17 +409,30 @@ img {
   /* overflow: hidden; */
 }
 
-.feature-card-icon {
+.features__icon {
   margin-bottom: 32px;
 }
 
-.about-us.container {
+.features__title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.5;
+  font-variant: small-caps;
+}
+
+.features__title--uppercase {
+  text-transform: uppercase;
+}
+
+/* About Us */
+.about-us {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .heading-thumb {
-  width: 454px;
+  max-width: 454px;
 }
 
 .heading-text {
@@ -424,16 +441,16 @@ img {
 
 /* Team */
 
-.team.section {
+.team {
   padding-top: 24px;
 }
 
-.team-list {
+.team__list {
   display: flex;
   gap: 32px;
 }
 
-.team-item {
+.team__item {
   position: relative;
   width: 368px;
   height: 408px;
@@ -444,26 +461,27 @@ img {
   border-radius: 8px;
 }
 
-.team-card-title {
+.team__content {
   position: absolute;
   top: 24px;
   right: 32px;
 }
 
-.team-text {
+.team__text {
   margin: 0;
   font-weight: 500;
   color: var(--color-secondary);
+  font-variant: small-caps;
 }
 
-.team-title {
+.team__title {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.571;
-  text-transform: uppercase;
+  font-variant: small-caps;
 }
 
-.blockquote {
+.team__blockquote {
   min-width: 304px;
   margin: 24px 0 auto;
 
@@ -477,28 +495,28 @@ img {
   background-color: var(--color-footer-bcg);
 }
 
-.footer-container {
+.footer__container {
   display: flex;
   justify-content: space-between;
 }
 
-.footer-text {
+.footer__text {
   max-width: 268px;
   margin-top: 16px;
 }
 
 /* Socials */
-.socials-list {
+.socials {
   display: flex;
   gap: 16px;
 }
 
-.socials-item {
+.socials__item {
   width: 32px;
   height: 32px;
 }
 
-.socials-link {
+.socials__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -509,46 +527,50 @@ img {
   border-radius: 50%;
 }
 
-.socials-link:hover {
+.socials__link:hover {
   background-color: var(--color-brand);
   fill: var(--color-tertiary);
 }
 
-.footer-title {
+.footer-list__title {
   color: var(--color-brand);
   margin-bottom: 24px;
 }
 
-.footer-form-title {
+.footer-list__title {
   color: var(--color-brand);
   margin-bottom: 16px;
 }
 
-.footer-item {
+.footer-list__item {
   margin-bottom: 12px;
 }
 
-.footer-item:last-child {
+.footer-list__item:last-child {
   margin-bottom: 0;
 }
 
-.footer-link {
+.footer-list__link {
   color: var(--color-secondary);
   text-decoration: none;
 }
 
-.footer-link:hover,
-.footer-link:focus {
+.footer-list__link:hover,
+.footer-list__link:focus {
   color: var(--color-brand);
 }
 
-.footer-input {
+/* .footer-input {
   width: 268px;
   height: 144px;
   border: none;
+} */
+
+.form-container__title {
+  color: var(--color-brand);
 }
 
-.footer-form-textarea {
+.footer-form__textarea {
   padding-left: 24px;
   padding-top: 16px;
   margin-bottom: 16px;
@@ -557,9 +579,10 @@ img {
   resize: none;
   border: none;
   outline: none;
+  border-radius: 2px;
 }
 
-.footer-form-textarea::placeholder {
+.footer-form__textarea::placeholder {
   font-size: 14px;
   line-height: 1.571;
 }
@@ -664,7 +687,7 @@ img {
   transform: translateY(-50%);
 }
 
-.form-field-textarea {
+.form-field__textarea {
   width: 100%;
   height: 120px;
   padding: 8px 12px;
@@ -675,29 +698,29 @@ img {
   resize: none;
 }
 
-.form-field-textarea:focus {
+.form-field__textarea:focus {
   border-color: var(--color-brand);
 }
 
-.form-field-textarea::placeholder {
+.form-field__textarea::placeholder {
   font-size: 12px;
   line-height: 1.333;
 }
 
-.form-field-checkbox {
+.checkbox {
   margin-bottom: 24px;
 
   font-size: 14px;
   line-height: 1.41;
 }
 
-.checkbox-label {
+.checkbox__label {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.checkbox-input {
+.checkbox__input {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -708,7 +731,7 @@ img {
   overflow: hidden;
 }
 
-.checkbox-icon {
+.checkbox__icon {
   display: inline-block;
   margin-right: 8px;
   width: 20px;
@@ -717,7 +740,7 @@ img {
   border-radius: 2px;
 }
 
-.checkbox-input:checked + .checkbox-icon {
+.checkbox__input:checked + .checkbox__icon {
   background-color: var(--color-background-action);
   border-color: transparent;
   background-image: url(../images/check.svg);
@@ -725,7 +748,7 @@ img {
   background-size: contain;
 }
 
-.checkbox-link {
+.checkbox__link {
   margin-left: 4px;
   color: var(--color-background-action);
 }
