--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,3 @@
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat'), url('../fonts/montserrat-v25-latin-regular.woff2') format('woff2'),
-    url('../fonts/montserrat-v25-latin-regular.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Montserrat'), url('../fonts/montserrat-v25-latin-500.woff2') format('woff2'),
-    url('../fonts/montserrat-v25-latin-500.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Montserrat'), url('../fonts/montserrat-v25-latin-italic.woff2') format('woff2'),
-    url('../fonts/montserrat-v25-latin-italic.woff') format('woff');
-}
-
 :root {
   --color-primary: #4f4f4f;
   --color-secondary: #333;
@@ -250,7 +226,7 @@ img {
   margin-bottom: 40px;
 }
 
-/* Advantage section */
+/* Advantages section */
 .section__container {
   display: flex;
   justify-content: space-between;
@@ -280,10 +256,6 @@ img {
   width: 600px;
   display: flex;
 }
-
-/* .common.container {
-  display: flex;
-} */
 
 .card-section__container {
   display: flex;
@@ -401,12 +373,10 @@ img {
 }
 
 .features__card {
-  /* position: relative; */
   padding: 64px 50px 60px;
   fill: var(--color-brand);
   background-color: var(--color-invert);
   border-radius: 8px;
-  /* overflow: hidden; */
 }
 
 .features__icon {
@@ -537,11 +507,6 @@ img {
   margin-bottom: 24px;
 }
 
-.footer-list__title {
-  color: var(--color-brand);
-  margin-bottom: 16px;
-}
-
 .footer-list__item {
   margin-bottom: 12px;
 }
@@ -560,14 +525,9 @@ img {
   color: var(--color-brand);
 }
 
-/* .footer-input {
-  width: 268px;
-  height: 144px;
-  border: none;
-} */
-
 .form-container__title {
   color: var(--color-brand);
+  margin-bottom: 16px;
 }
 
 .footer-form__textarea {
@@ -619,6 +579,7 @@ img {
   max-height: 676px;
   padding: 40px;
   background-color: var(--color-background);
+  border-radius: 4px;
   overflow-y: auto;
 }
 
